# OpenAlex-SQLite-Cache

./: README.md  pyproject.toml
src/OpenAlex-SQLite-Cache/: author.py  clean.py  concept.py  init_db.py  institution.py  publisher.py  source.py  topic.py  work.py
src/openalex_sqlite_cache/: author.py  concept.py  entity.py  funder.py  init_db.py  init_db.sql  institution.py  publisher.py  source.py  topic.py  work.py
tests/: test_authors.py  test_concepts.py  test_institutions.py  test_publishers.py  test_topics.py
tests/examples_from_db/: example_author.json  example_concept.json  example_institution.json  example_publisher.json  example_topic.json
tests/examples_from_web_API/: example_author.json  example_concept.json  example_funder.json  example_institution.json  example_publisher.json  example_source.json  example_topic.json
tests/fixtures/: test_conn.py
