[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openalex_sqlite_cache"
version = "0.1.0"
description = "A SQLite cache for OpenAlex API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Mitchell Tillman", email = "mtillman14@gmail.com"}
]
maintainers = [
    {name = "Mitchell Tillman", email = "mtillman14@gmail.com"}
]
dependencies = [
    
]

[project.urls]
homepage = "https://github.com/mtillman14/OpenAlex-SQLite-Cache"
repository = "https://github.com/mtillman14/OpenAlex-SQLite-Cache.git"